--- a/styles/theme.css
+++ b/styles/theme.css
@@ -192,7 +192,7 @@
   }
 
   .primary-gradient {
-    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+    background: linear-gradient(129deg, #0280ce 0%, rgb(95, 130, 226) 100%);
   }
 
   .dark-gradient {
