--- a/app/globals.css
+++ b/app/globals.css
@@ -22,10 +22,10 @@ body {
     @apply flex flex-row items-center gap-4 min-w-[400px] justify-center;
   }
   .form_input {
-    @apply no-focus   min-h-[56px] border font-noto_sans;
+    @apply no-focus   min-h-[56px] border font-noto_sans max-w-[250px];
   }
   .form_label {
-    @apply min-w-[100px] font-semibold text-[20px];
+    @apply min-w-[130px] font-semibold text-[20px] max-w-[150px];
   }
   .flex-center {
     @apply flex justify-center items-center;
@@ -43,7 +43,7 @@ body {
     @apply bg-light-900 dark:dark-gradient shadow-light-400 dark:shadow-dark-100 drop-shadow-2xl;
   }
   .auth_btn {
-    @apply dark-gradient dark:primary-gradient max-w-[100px] object-contain p-4 text-center  font-noto_sans text-[1em] font-extrabold text-white hover:scale-105 hover:animate-pulse hover:text-[1.05em] dark:text-dark-300 tracking-widest !important;
+    @apply dark-gradient dark:primary-gradient max-w-[100px] 2xl:max-w-[130px] 2xl:min-h-[40px] 2xl:p-6 object-contain p-4 text-center  font-noto_sans text-[1em] font-extrabold text-white hover:scale-105 hover:animate-pulse hover:text-[1.05em]  tracking-widest !important;
   }
   .drawer_btn {
     @apply dark-gradient dark:primary-gradient max-w-[100px]  p-4 text-center  font-noto_sans  font-bold text-white hover:scale-105 hover:animate-pulse  tracking-widest !important;
