--- a/components/bigCalendar/calendar.css
+++ b/components/bigCalendar/calendar.css
@@ -1,4 +1,18 @@
 .e-schedule .e-appointment-details {
   padding: 0 !important;
   margin: 0 !important;
+  max-width: 100% !important;
+  min-width: 100% !important;
+  color: cyan;
+}
+.e-schedule {
+  min-width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  min-height: 100%;
+}
+.e-schedule .e-appointment {
+  padding: 0 !important;
+  margin: 0 !important;
+  background-color: none !important;
 }
