--- a/app/globals.css
+++ b/app/globals.css
@@ -26,14 +26,6 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
   }
-
-  .dark {
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-  }
 }
 @layer utilities {
   .text-36-bold {
@@ -175,7 +167,7 @@
   }
 
   .tab {
-    @apply min-h-full dark:bg-dark-400 bg-light-800 text-light-500 dark:data-[state=active]:bg-dark-300 data-[state=active]:bg-primary-100 data-[state=active]:text-primary-500 !important;
+    @apply min-h-full dark:bg-dark-400 bg-light-800 text-light-900 dark:data-[state=active]:bg-dark-100 data-[state=active]:bg-primary-100 data-[state=active]:text-yellow-500 !important;
   }
   .shad-textArea {
     @apply bg-dark-400 placeholder:text-dark-600 border-dark-500 focus-visible:ring-0 focus-visible:ring-offset-0 !important;
