--- a/components/Scheduler/calendar.css
+++ b/components/Scheduler/calendar.css
@@ -14,12 +14,16 @@
 
   margin-left: 7px !important;
 }
+.scheduler-container {
+  display: flex;
 
+  height: 100%;
+}
 .e-schedule {
   min-width: 100%;
   max-width: 100%;
   max-height: 100%;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 .e-time-slots {
