--- a/components/Scheduler/calendar.css
+++ b/components/Scheduler/calendar.css
@@ -17,13 +17,13 @@
 .scheduler-container {
   display: flex;
 
-  height: 100%;
+  height: 110vh;
 }
 .e-schedule {
   min-width: 100%;
   max-width: 100%;
-  max-height: 100%;
-  min-height: 100vh;
+
+  height: 130vh;
 }
 
 .e-time-slots {
